--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,3 +14,8 @@ dependencies = [
     "numpy",
     "pandas",
 ]
+
+[tool.poetry.include]
+"cookiecutter-psyflow/**" = {format = "glob"}
+[tool.poetry.scripts]
+psyflow-init = "psyflow.cli:main"
