Add missing dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,11 @@ dependencies = [
     "psychopy",
     "numpy",
     "pandas",
+    "click",
+    "cookiecutter",
+    "pyyaml",
+    "pyserial",
+    "edge-tts",
 ]
 dynamic = ["entry-points"]
 
