--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,19 +1,38 @@
-name: Deploy Docs
+name: Deploy Documentation
 
 on:
   push:
     branches:
-      - main
+      - main  # or 'master' if that's your default branch
+    paths:
+      - 'docs/**'
+      - '.github/workflows/deploy-docs.yml'
 
 jobs:
-  deploy-docs:
-    if: contains(github.event.head_commit.message, '[docs]')
+  build-and-deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.x'
-      - run: pip install -r docs/requirements.txt ghp-import
-      - run: make -C docs html
-      - run: ghp-import -p -f -n docs/_build/html 
+          python-version: '3.10'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r docs/requirements.txt  # adjust path as needed
+          pip install ghp-import
+
+      - name: Build HTML docs
+        run: |
+          cd docs
+          make clean
+          make html
+
+      - name: Deploy to GitHub Pages
+        run: |
+          ghp-import -n -f -p docs/_build/html
