--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -3,13 +3,11 @@ name: Deploy Documentation
 on:
   push:
     branches:
-      - main  # or 'master' if that's your default branch
-    paths:
-      - 'docs/**'
-      - '.github/workflows/deploy-docs.yml'
+      - main
 
 jobs:
-  build-and-deploy:
+  deploy-docs:
+    if: contains(github.event.head_commit.message, '[docs]')
     runs-on: ubuntu-latest
 
     steps:
@@ -24,7 +22,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r docs/requirements.txt  # adjust path as needed
+          pip install -r docs/requirements.txt
           pip install ghp-import
 
       - name: Build HTML docs
