--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,9 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "psyflow"
-version = "0.1.2"
+version = "0.1.3"
 description = "A utility package for building modular PsychoPy experiments."
+requires-python = ">=3.10"
 authors = [
     { name="Zhipeng Cao", email="zhipeng30@foxmail.com" }
 ]
@@ -18,10 +19,6 @@ dependencies = [
     "pyyaml",
     "pyserial",
     "edge-tts",
-    "requests",
-    "tiktoken",
-    "openai",
-    "google-generativeai",
 ]
 dynamic = ["entry-points"]
 
