Add sampler-ready sim plugins and redesign CLI to unified psyflow commands

--- a/psyflow/templates/cookiecutter-psyflow/{{cookiecutter.project_name}}/acceptance_criteria.yaml
+++ b/psyflow/templates/cookiecutter-psyflow/{{cookiecutter.project_name}}/acceptance_criteria.yaml
@@ -1,4 +1,4 @@
-# Minimal acceptance criteria for psyflow-qa.
+# Minimal acceptance criteria for `psyflow qa`.
 #
 # Keep this file small and mechanical. The QA runner uses it for schema checks
 # and runtime trace validation.
