--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "psyflow"
-version = "0.1.3"
+version = "0.1.8"
 description = "A utility package for building modular PsychoPy experiments."
 requires-python = ">=3.10"
 authors = [
@@ -24,3 +24,6 @@ dynamic = ["entry-points"]
 
 [project.scripts]
 psyflow = "psyflow.cli:main"
+psyflow-run = "psyflow.task_launcher:run_main"
+psyflow-qa = "psyflow.task_launcher:qa_main"
+psyflow-sim = "psyflow.task_launcher:sim_main"
