--- a/psyflow/templates/cookiecutter-psyflow/{{cookiecutter.project_name}}/config/config.yaml
+++ b/psyflow/templates/cookiecutter-psyflow/{{cookiecutter.project_name}}/config/config.yaml
@@ -7,6 +7,7 @@
 window:
   size: [1024, 768]
   units: pix
+  screen: 0
   bg_color: gray
   fullscreen: false
   monitor_width_cm: 35.5
@@ -19,6 +20,7 @@ task:
   total_trials: 10
   conditions: [win, lose, neutral]
   key_list: [space]
+  seed_mode: same_across_sub
   delta: 1
 
 timing:
