--- a/psyflow/contracts/v0.1.0/required_files.yaml
+++ b/psyflow/contracts/v0.1.0/required_files.yaml
@@ -2,6 +2,10 @@
 required_paths:
   - assets/
   - config/
+  - config/config.yaml
+  - config/config_qa.yaml
+  - config/config_scripted_sim.yaml
+  - config/config_sampler_sim.yaml
   - src/
   - main.py
   - taskbeacon.yaml
