--- a/psyflow/templates/cookiecutter-psyflow/{{cookiecutter.project_name}}/config/config_sampler_sim.yaml
+++ b/psyflow/templates/cookiecutter-psyflow/{{cookiecutter.project_name}}/config/config_sampler_sim.yaml
@@ -1,32 +1,11 @@
-# Minimal runnable config for the bundled psyflow template task.
-#
-# Notes:
-# - `load_config()` flattens `window` + `task` + `timing` into `task_config`.
-# - The MID demo code in `main.py` / `src/run_trial.py` expects these fields.
+# ============================================================================
+# Sampler simulation config
+# - Used by: python main.py sim --config config/config_sampler_sim.yaml
+# - Scope: sampler simulation only (no qa section in this file)
+# - Profile: short smoke run for sampler integration checks
+# ============================================================================
 
-window:
-  size: [1024, 768]
-  units: pix
-  bg_color: gray
-  fullscreen: false
-  monitor_width_cm: 35.5
-  monitor_distance_cm: 60
-
-task:
-  task_name: mid_demo
-  save_path: ./outputs/human
-  total_blocks: 2
-  total_trials: 10
-  conditions: [win, lose, neutral]
-  key_list: [space]
-  delta: 1
-
-timing:
-  cue_duration: 0.5
-  anticipation_duration: 1.0
-  prefeedback_duration: 0.5
-  feedback_duration: 1.0
-
+# === Subject Form ===========================================================
 subinfo_fields:
   - name: subject_id
     type: int
@@ -34,6 +13,7 @@ subinfo_fields:
       min: 101
       max: 999
       digits: 3
+
 subinfo_mapping:
   subject_id: Subject ID (3 digits)
   Participant Information: Participant Information
@@ -41,6 +21,40 @@ subinfo_mapping:
   registration_successful: Registration successful
   invalid_input: "Invalid input for {field}"
 
+
+# === Display / Window =======================================================
+window:
+  size: [1024, 768]
+  units: pix
+  screen: 0
+  bg_color: gray
+  fullscreen: false
+  monitor_width_cm: 35.5
+  monitor_distance_cm: 60
+
+
+# === Task ==================================================================
+task:
+  task_name: mid_demo
+  save_path: ./outputs/sim
+  total_blocks: 1
+  total_trials: 12
+  trial_per_block: 12
+  conditions: [win, lose, neutral]
+  key_list: [space]
+  seed_mode: same_across_sub
+  delta: 1
+
+
+# === Timing =================================================================
+timing:
+  cue_duration: 0.5
+  anticipation_duration: 1.0
+  prefeedback_duration: 0.5
+  feedback_duration: 1.0
+
+
+# === Stimuli ================================================================
 stimuli:
   fixation:
     type: text
@@ -132,33 +146,29 @@ stimuli:
     height: 28
     wrapWidth: 900
 
+
+# === Triggers ===============================================================
 triggers:
   map:
     exp_onset: 1
     exp_end: 2
     block_onset: 10
     block_end: 11
-
     win_cue_onset: 20
     lose_cue_onset: 21
     neutral_cue_onset: 22
-
     win_anti_onset: 30
     lose_anti_onset: 31
     neutral_anti_onset: 32
-
     win_target_onset: 40
     lose_target_onset: 41
     neutral_target_onset: 42
-
     win_key_press: 50
     lose_key_press: 51
     neutral_key_press: 52
-
     win_no_response: 60
     lose_no_response: 61
     neutral_no_response: 62
-
     win_hit_fb_onset: 70
     win_miss_fb_onset: 71
     lose_hit_fb_onset: 72
@@ -166,7 +176,6 @@ triggers:
     neutral_hit_fb_onset: 74
     neutral_miss_fb_onset: 75
 
-  # Hardware config is intentionally separate from the event->code map.
   driver:
     type: serial_url
     url: loop://
@@ -178,6 +187,8 @@ triggers:
   policy:
     strict: false
 
+
+# === Adaptive Controller (optional) =========================================
 controller:
   initial_duration: 0.25
   min_duration: 0.08
@@ -187,22 +198,22 @@ controller:
   condition_specific: true
   enable_logging: true
 
-qa:
-  output_dir: outputs/qa
-  enable_scaling: false
-  timing_scale: 1.0
-  min_frames: 2
-  strict: false
-  max_wait_s: 10.0
 
+# === Simulation Runtime (sampler responder) =================================
 sim:
   output_dir: outputs/sim
   seed: 0
+  participant_id: sim001
+  session_id: sub-sim001_task-mid_demo_seed0
+  log_path: outputs/sim/sub-sim001_task-mid_demo_seed0_sim_events.jsonl
   policy: warn
   default_rt_s: 0.2
   clamp_rt: false
   responder:
-    type: scripted
+    type: responders.task_sampler:TaskSamplerResponder
     kwargs:
       key: space
-      rt_s: 0.25
+      hit_rate: 0.7
+      rt_mean_s: 0.28
+      rt_sd_s: 0.05
+      rt_min_s: 0.12
